antlr/v2/cpp/GameDSLParser.cpp

// Generated from GameDSL.g4 by ANTLR 4.13.2


#include "GameDSLListener.h"

#include "GameDSLParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct GameDSLParserStaticData final {
  GameDSLParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  GameDSLParserStaticData(const GameDSLParserStaticData&) = delete;
  GameDSLParserStaticData(GameDSLParserStaticData&&) = delete;
  GameDSLParserStaticData& operator=(const GameDSLParserStaticData&) = delete;
  GameDSLParserStaticData& operator=(GameDSLParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag gamedslParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<GameDSLParserStaticData> gamedslParserStaticData = nullptr;

void gamedslParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (gamedslParserStaticData != nullptr) {
    return;
  }
#else
  assert(gamedslParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<GameDSLParserStaticData>(
    std::vector<std::string>{
      "start", "gameBoard", "sensorXY", "game", "gameState", "gameStateType", 
      "gameTimeType", "stateSelectionType", "sensorState", "color", "gameStateAnnotation", 
      "gameId", "id", "x", "y", "width", "height", "gameStateDuration", 
      "gameDuration"
    },
    std::vector<std::string>{
      "", "'board'", "'game'", "'game_state'", "'normal'", "'start'", "'clean'", 
      "'mine'", "'sequence'", "'stopwatch'", "'random'", "'off'", "'red'", 
      "'blue'", "'violet'", "'green'", "'yellow'", "'orange'", "'white'", 
      "','", "'('", "')'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "COMMA", "LPAREN", "RPAREN", "STRING", "NUMBER", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  gamedslParserStaticData = std::move(staticData);
}

}

GameDSLParser::GameDSLParser(TokenStream *input) : GameDSLParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

GameDSLParser::GameDSLParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  GameDSLParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *gamedslParserStaticData->atn, gamedslParserStaticData->decisionToDFA, gamedslParserStaticData->sharedContextCache, options);
}

GameDSLParser::~GameDSLParser() {
  delete _interpreter;
}

const atn::ATN& GameDSLParser::getATN() const {
  return *gamedslParserStaticData->atn;
}

std::string GameDSLParser::getGrammarFileName() const {
  return "GameDSL.g4";
}

const std::vector<std::string>& GameDSLParser::getRuleNames() const {
  return gamedslParserStaticData->ruleNames;
}

const dfa::Vocabulary& GameDSLParser::getVocabulary() const {
  return gamedslParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView GameDSLParser::getSerializedATN() const {
  return gamedslParserStaticData->serializedATN;
}


//----------------- StartContext ------------------------------------------------------------------

GameDSLParser::StartContext::StartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GameDSLParser::GameBoardContext* GameDSLParser::StartContext::gameBoard() {
  return getRuleContext<GameDSLParser::GameBoardContext>(0);
}

std::vector<GameDSLParser::GameContext *> GameDSLParser::StartContext::game() {
  return getRuleContexts<GameDSLParser::GameContext>();
}

GameDSLParser::GameContext* GameDSLParser::StartContext::game(size_t i) {
  return getRuleContext<GameDSLParser::GameContext>(i);
}

tree::TerminalNode* GameDSLParser::StartContext::EOF() {
  return getToken(GameDSLParser::EOF, 0);
}

std::vector<tree::TerminalNode *> GameDSLParser::StartContext::COMMA() {
  return getTokens(GameDSLParser::COMMA);
}

tree::TerminalNode* GameDSLParser::StartContext::COMMA(size_t i) {
  return getToken(GameDSLParser::COMMA, i);
}


size_t GameDSLParser::StartContext::getRuleIndex() const {
  return GameDSLParser::RuleStart;
}

void GameDSLParser::StartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStart(this);
}

void GameDSLParser::StartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStart(this);
}

GameDSLParser::StartContext* GameDSLParser::start() {
  StartContext *_localctx = _tracker.createInstance<StartContext>(_ctx, getState());
  enterRule(_localctx, 0, GameDSLParser::RuleStart);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(38);
    gameBoard();
    setState(39);
    game();
    setState(44);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == GameDSLParser::COMMA) {
      setState(40);
      match(GameDSLParser::COMMA);
      setState(41);
      game();
      setState(46);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(47);
    match(GameDSLParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GameBoardContext ------------------------------------------------------------------

GameDSLParser::GameBoardContext::GameBoardContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GameDSLParser::WidthContext* GameDSLParser::GameBoardContext::width() {
  return getRuleContext<GameDSLParser::WidthContext>(0);
}

std::vector<tree::TerminalNode *> GameDSLParser::GameBoardContext::COMMA() {
  return getTokens(GameDSLParser::COMMA);
}

tree::TerminalNode* GameDSLParser::GameBoardContext::COMMA(size_t i) {
  return getToken(GameDSLParser::COMMA, i);
}

GameDSLParser::HeightContext* GameDSLParser::GameBoardContext::height() {
  return getRuleContext<GameDSLParser::HeightContext>(0);
}

std::vector<GameDSLParser::SensorXYContext *> GameDSLParser::GameBoardContext::sensorXY() {
  return getRuleContexts<GameDSLParser::SensorXYContext>();
}

GameDSLParser::SensorXYContext* GameDSLParser::GameBoardContext::sensorXY(size_t i) {
  return getRuleContext<GameDSLParser::SensorXYContext>(i);
}


size_t GameDSLParser::GameBoardContext::getRuleIndex() const {
  return GameDSLParser::RuleGameBoard;
}

void GameDSLParser::GameBoardContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGameBoard(this);
}

void GameDSLParser::GameBoardContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGameBoard(this);
}

GameDSLParser::GameBoardContext* GameDSLParser::gameBoard() {
  GameBoardContext *_localctx = _tracker.createInstance<GameBoardContext>(_ctx, getState());
  enterRule(_localctx, 2, GameDSLParser::RuleGameBoard);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    match(GameDSLParser::T__0);
    setState(50);
    width();
    setState(51);
    match(GameDSLParser::COMMA);
    setState(52);
    height();
    setState(53);
    match(GameDSLParser::COMMA);
    setState(54);
    sensorXY();
    setState(59);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == GameDSLParser::COMMA) {
      setState(55);
      match(GameDSLParser::COMMA);
      setState(56);
      sensorXY();
      setState(61);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SensorXYContext ------------------------------------------------------------------

GameDSLParser::SensorXYContext::SensorXYContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GameDSLParser::SensorXYContext::LPAREN() {
  return getToken(GameDSLParser::LPAREN, 0);
}

GameDSLParser::IdContext* GameDSLParser::SensorXYContext::id() {
  return getRuleContext<GameDSLParser::IdContext>(0);
}

std::vector<tree::TerminalNode *> GameDSLParser::SensorXYContext::COMMA() {
  return getTokens(GameDSLParser::COMMA);
}

tree::TerminalNode* GameDSLParser::SensorXYContext::COMMA(size_t i) {
  return getToken(GameDSLParser::COMMA, i);
}

GameDSLParser::XContext* GameDSLParser::SensorXYContext::x() {
  return getRuleContext<GameDSLParser::XContext>(0);
}

GameDSLParser::YContext* GameDSLParser::SensorXYContext::y() {
  return getRuleContext<GameDSLParser::YContext>(0);
}

tree::TerminalNode* GameDSLParser::SensorXYContext::RPAREN() {
  return getToken(GameDSLParser::RPAREN, 0);
}


size_t GameDSLParser::SensorXYContext::getRuleIndex() const {
  return GameDSLParser::RuleSensorXY;
}

void GameDSLParser::SensorXYContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSensorXY(this);
}

void GameDSLParser::SensorXYContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSensorXY(this);
}

GameDSLParser::SensorXYContext* GameDSLParser::sensorXY() {
  SensorXYContext *_localctx = _tracker.createInstance<SensorXYContext>(_ctx, getState());
  enterRule(_localctx, 4, GameDSLParser::RuleSensorXY);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    match(GameDSLParser::LPAREN);
    setState(63);
    id();
    setState(64);
    match(GameDSLParser::COMMA);
    setState(65);
    x();
    setState(66);
    match(GameDSLParser::COMMA);
    setState(67);
    y();
    setState(68);
    match(GameDSLParser::RPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GameContext ------------------------------------------------------------------

GameDSLParser::GameContext::GameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GameDSLParser::GameContext::LPAREN() {
  return getToken(GameDSLParser::LPAREN, 0);
}

GameDSLParser::GameIdContext* GameDSLParser::GameContext::gameId() {
  return getRuleContext<GameDSLParser::GameIdContext>(0);
}

std::vector<tree::TerminalNode *> GameDSLParser::GameContext::COMMA() {
  return getTokens(GameDSLParser::COMMA);
}

tree::TerminalNode* GameDSLParser::GameContext::COMMA(size_t i) {
  return getToken(GameDSLParser::COMMA, i);
}

GameDSLParser::GameTimeTypeContext* GameDSLParser::GameContext::gameTimeType() {
  return getRuleContext<GameDSLParser::GameTimeTypeContext>(0);
}

GameDSLParser::StateSelectionTypeContext* GameDSLParser::GameContext::stateSelectionType() {
  return getRuleContext<GameDSLParser::StateSelectionTypeContext>(0);
}

GameDSLParser::GameDurationContext* GameDSLParser::GameContext::gameDuration() {
  return getRuleContext<GameDSLParser::GameDurationContext>(0);
}

std::vector<GameDSLParser::GameStateContext *> GameDSLParser::GameContext::gameState() {
  return getRuleContexts<GameDSLParser::GameStateContext>();
}

GameDSLParser::GameStateContext* GameDSLParser::GameContext::gameState(size_t i) {
  return getRuleContext<GameDSLParser::GameStateContext>(i);
}

tree::TerminalNode* GameDSLParser::GameContext::RPAREN() {
  return getToken(GameDSLParser::RPAREN, 0);
}


size_t GameDSLParser::GameContext::getRuleIndex() const {
  return GameDSLParser::RuleGame;
}

void GameDSLParser::GameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGame(this);
}

void GameDSLParser::GameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGame(this);
}

GameDSLParser::GameContext* GameDSLParser::game() {
  GameContext *_localctx = _tracker.createInstance<GameContext>(_ctx, getState());
  enterRule(_localctx, 6, GameDSLParser::RuleGame);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(70);
    match(GameDSLParser::T__1);
    setState(71);
    match(GameDSLParser::LPAREN);
    setState(72);
    gameId();
    setState(73);
    match(GameDSLParser::COMMA);
    setState(74);
    gameTimeType();
    setState(75);
    match(GameDSLParser::COMMA);
    setState(76);
    stateSelectionType();
    setState(77);
    match(GameDSLParser::COMMA);
    setState(78);
    gameDuration();
    setState(79);
    match(GameDSLParser::COMMA);
    setState(80);
    gameState();
    setState(85);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == GameDSLParser::COMMA) {
      setState(81);
      match(GameDSLParser::COMMA);
      setState(82);
      gameState();
      setState(87);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(88);
    match(GameDSLParser::RPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GameStateContext ------------------------------------------------------------------

GameDSLParser::GameStateContext::GameStateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GameDSLParser::GameStateContext::LPAREN() {
  return getToken(GameDSLParser::LPAREN, 0);
}

GameDSLParser::GameStateTypeContext* GameDSLParser::GameStateContext::gameStateType() {
  return getRuleContext<GameDSLParser::GameStateTypeContext>(0);
}

std::vector<tree::TerminalNode *> GameDSLParser::GameStateContext::COMMA() {
  return getTokens(GameDSLParser::COMMA);
}

tree::TerminalNode* GameDSLParser::GameStateContext::COMMA(size_t i) {
  return getToken(GameDSLParser::COMMA, i);
}

GameDSLParser::GameStateDurationContext* GameDSLParser::GameStateContext::gameStateDuration() {
  return getRuleContext<GameDSLParser::GameStateDurationContext>(0);
}

tree::TerminalNode* GameDSLParser::GameStateContext::RPAREN() {
  return getToken(GameDSLParser::RPAREN, 0);
}

std::vector<GameDSLParser::SensorStateContext *> GameDSLParser::GameStateContext::sensorState() {
  return getRuleContexts<GameDSLParser::SensorStateContext>();
}

GameDSLParser::SensorStateContext* GameDSLParser::GameStateContext::sensorState(size_t i) {
  return getRuleContext<GameDSLParser::SensorStateContext>(i);
}

GameDSLParser::GameStateAnnotationContext* GameDSLParser::GameStateContext::gameStateAnnotation() {
  return getRuleContext<GameDSLParser::GameStateAnnotationContext>(0);
}


size_t GameDSLParser::GameStateContext::getRuleIndex() const {
  return GameDSLParser::RuleGameState;
}

void GameDSLParser::GameStateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGameState(this);
}

void GameDSLParser::GameStateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGameState(this);
}

GameDSLParser::GameStateContext* GameDSLParser::gameState() {
  GameStateContext *_localctx = _tracker.createInstance<GameStateContext>(_ctx, getState());
  enterRule(_localctx, 8, GameDSLParser::RuleGameState);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    match(GameDSLParser::T__2);
    setState(91);
    match(GameDSLParser::LPAREN);
    setState(92);
    gameStateType();
    setState(93);
    match(GameDSLParser::COMMA);
    setState(94);
    gameStateDuration();
    setState(97); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(95);
      match(GameDSLParser::COMMA);
      setState(96);
      sensorState();
      setState(99); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == GameDSLParser::COMMA);
    setState(101);
    match(GameDSLParser::RPAREN);
    setState(103);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == GameDSLParser::STRING) {
      setState(102);
      gameStateAnnotation();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GameStateTypeContext ------------------------------------------------------------------

GameDSLParser::GameStateTypeContext::GameStateTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t GameDSLParser::GameStateTypeContext::getRuleIndex() const {
  return GameDSLParser::RuleGameStateType;
}

void GameDSLParser::GameStateTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGameStateType(this);
}

void GameDSLParser::GameStateTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGameStateType(this);
}

GameDSLParser::GameStateTypeContext* GameDSLParser::gameStateType() {
  GameStateTypeContext *_localctx = _tracker.createInstance<GameStateTypeContext>(_ctx, getState());
  enterRule(_localctx, 10, GameDSLParser::RuleGameStateType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 240) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GameTimeTypeContext ------------------------------------------------------------------

GameDSLParser::GameTimeTypeContext::GameTimeTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t GameDSLParser::GameTimeTypeContext::getRuleIndex() const {
  return GameDSLParser::RuleGameTimeType;
}

void GameDSLParser::GameTimeTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGameTimeType(this);
}

void GameDSLParser::GameTimeTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGameTimeType(this);
}

GameDSLParser::GameTimeTypeContext* GameDSLParser::gameTimeType() {
  GameTimeTypeContext *_localctx = _tracker.createInstance<GameTimeTypeContext>(_ctx, getState());
  enterRule(_localctx, 12, GameDSLParser::RuleGameTimeType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    _la = _input->LA(1);
    if (!(_la == GameDSLParser::T__7

    || _la == GameDSLParser::T__8)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StateSelectionTypeContext ------------------------------------------------------------------

GameDSLParser::StateSelectionTypeContext::StateSelectionTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t GameDSLParser::StateSelectionTypeContext::getRuleIndex() const {
  return GameDSLParser::RuleStateSelectionType;
}

void GameDSLParser::StateSelectionTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStateSelectionType(this);
}

void GameDSLParser::StateSelectionTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStateSelectionType(this);
}

GameDSLParser::StateSelectionTypeContext* GameDSLParser::stateSelectionType() {
  StateSelectionTypeContext *_localctx = _tracker.createInstance<StateSelectionTypeContext>(_ctx, getState());
  enterRule(_localctx, 14, GameDSLParser::RuleStateSelectionType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    _la = _input->LA(1);
    if (!(_la == GameDSLParser::T__7

    || _la == GameDSLParser::T__9)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SensorStateContext ------------------------------------------------------------------

GameDSLParser::SensorStateContext::SensorStateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GameDSLParser::ColorContext* GameDSLParser::SensorStateContext::color() {
  return getRuleContext<GameDSLParser::ColorContext>(0);
}


size_t GameDSLParser::SensorStateContext::getRuleIndex() const {
  return GameDSLParser::RuleSensorState;
}

void GameDSLParser::SensorStateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSensorState(this);
}

void GameDSLParser::SensorStateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSensorState(this);
}

GameDSLParser::SensorStateContext* GameDSLParser::sensorState() {
  SensorStateContext *_localctx = _tracker.createInstance<SensorStateContext>(_ctx, getState());
  enterRule(_localctx, 16, GameDSLParser::RuleSensorState);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    color();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ColorContext ------------------------------------------------------------------

GameDSLParser::ColorContext::ColorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t GameDSLParser::ColorContext::getRuleIndex() const {
  return GameDSLParser::RuleColor;
}

void GameDSLParser::ColorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterColor(this);
}

void GameDSLParser::ColorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitColor(this);
}

GameDSLParser::ColorContext* GameDSLParser::color() {
  ColorContext *_localctx = _tracker.createInstance<ColorContext>(_ctx, getState());
  enterRule(_localctx, 18, GameDSLParser::RuleColor);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(113);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 522240) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GameStateAnnotationContext ------------------------------------------------------------------

GameDSLParser::GameStateAnnotationContext::GameStateAnnotationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GameDSLParser::GameStateAnnotationContext::STRING() {
  return getToken(GameDSLParser::STRING, 0);
}


size_t GameDSLParser::GameStateAnnotationContext::getRuleIndex() const {
  return GameDSLParser::RuleGameStateAnnotation;
}

void GameDSLParser::GameStateAnnotationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGameStateAnnotation(this);
}

void GameDSLParser::GameStateAnnotationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGameStateAnnotation(this);
}

GameDSLParser::GameStateAnnotationContext* GameDSLParser::gameStateAnnotation() {
  GameStateAnnotationContext *_localctx = _tracker.createInstance<GameStateAnnotationContext>(_ctx, getState());
  enterRule(_localctx, 20, GameDSLParser::RuleGameStateAnnotation);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    match(GameDSLParser::STRING);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GameIdContext ------------------------------------------------------------------

GameDSLParser::GameIdContext::GameIdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GameDSLParser::GameIdContext::NUMBER() {
  return getToken(GameDSLParser::NUMBER, 0);
}


size_t GameDSLParser::GameIdContext::getRuleIndex() const {
  return GameDSLParser::RuleGameId;
}

void GameDSLParser::GameIdContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGameId(this);
}

void GameDSLParser::GameIdContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GameDSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGameId(this);
}

GameDSLParser::GameIdContext* GameDSLParser::gameId() {
  GameIdContext *_localctx = _tracker.createInstance<GameIdContext>(_ctx, getState());
  enterRule(_localctx, 22, GameDSLParser::RuleGameId);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    match(GameDSLParser::NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdContext ------------------------------------------------------------------

GameDSLParser::IdContext::IdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GameDSLParser::IdContext::NUMBER() {
  return getToken(GameDSLParser::NUMBER, 0);
}


size_t GameDSLParser::IdContext::getRuleIndex() const {
  return GameDSLParser::RuleId;
}
